business-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  name: my-nginx
  namespace: business-app
spec:
  host: business-app.apps.lab.example.com
  tls:
    termination: edge
  to:
    kind: Service
    name: my-nginx
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    host: business-app.apps.lab.example.com
    routerName: router
    wildcardPolicy: None
